# dsa-exercises

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  QA_FINDINGS.md  README.md  pyproject.toml  requirements.txt
dsa_helpers/: __init__.py  _function_registry.py  checker.py  comparators.py  data_structures.py  hints.py  test_cases.py
dsa_helpers/test_cases/: __init__.py  array_string.py  backtracking.py  binary_search.py  bit_manipulation.py  cyclic_sort.py  dp.py  fast_slow.py  graph.py  hash_map.py  k_way_merge.py  linked_list.py  merge_intervals.py  monotonic_stack.py  subsets.py  top_k.py  tree.py  two_heaps.py  two_pointers.py
hints/: 01_array_string.yaml  02_hash_map.yaml  03_two_pointers_sliding_window.yaml  04_fast_slow_pointers.yaml  05_merge_intervals.yaml  06_cyclic_sort.yaml  07_linked_list_reversal.yaml  08_tree_bfs_dfs.yaml  09_two_heaps.yaml  10_subsets_permutations.yaml  11_modified_binary_search.yaml  12_top_k_elements.yaml  13_k_way_merge.yaml  14_graph_patterns.yaml  15_dynamic_programming.yaml  16_backtracking.yaml  17_monotonic_stack_queue.yaml  18_bit_manipulation.yaml
notebooks/: 01_array_string.ipynb  02_hash_map.ipynb  03_two_pointers_sliding_window.ipynb  04_fast_slow_pointers.ipynb  05_merge_intervals.ipynb  06_cyclic_sort.ipynb  07_linked_list_reversal.ipynb  08_tree_bfs_dfs.ipynb  09_two_heaps.ipynb  10_subsets_permutations.ipynb  11_modified_binary_search.ipynb  12_top_k_elements.ipynb  13_k_way_merge.ipynb  14_graph_patterns.ipynb  15_dynamic_programming.ipynb  16_backtracking.ipynb  17_monotonic_stack_queue.ipynb  18_bit_manipulation.ipynb
tests/: conftest.py
tests/test_01_array_string/: __init__.py  test_p01_two_sum.py  test_p02_valid_anagram.py  test_p03_valid_palindrome.py  test_p04_reverse_string.py  test_p05_longest_common_prefix.py  test_p06_remove_duplicates.py  test_p07_rotate_array.py  test_p08_move_zeroes.py  test_p09_plus_one.py  test_p10_merge_sorted_arrays.py  test_p11_product_except_self.py  test_p12_container_with_most_water.py  test_p13_trapping_rain_water.py  test_p14_longest_substring_without_repeating.py  test_p15_minimum_window_substring.py
tests/test_02_hash_map/: __init__.py  test_p01_group_anagrams.py  test_p02_two_sum_ii.py  test_p03_contains_duplicate.py  test_p04_isomorphic_strings.py  test_p05_word_pattern.py  test_p06_happy_number.py  test_p07_first_unique_character.py  test_p08_intersection_of_two_arrays.py  test_p09_longest_consecutive_sequence.py  test_p10_subarray_sum_equals_k.py  test_p11_four_sum_ii.py  test_p12_lru_cache.py
tests/test_03_two_pointers_sliding_window/: __init__.py  test_p01_remove_element.py  test_p02_squares_of_sorted_array.py  (+13 more)
(+186 files in other folders)
