[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-helpers"
version = "0.1.0"
description = "Helper utilities for DSA exercises"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "nbformat>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dsa_helpers*"]
